[Epic] bundle state recovery logic - part 1