@@ -18,15 +18,25 @@
  */
 package org.apache.pulsar.broker.loadbalance.extensible.channel;
 
-import com.google.common.collect.ImmutableMap;
+import static org.apache.pulsar.broker.loadbalance.extensible.channel.BundleState.Assigning;
+import static org.apache.pulsar.broker.loadbalance.extensible.channel.BundleState.inFlightStates;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
 import org.apache.commons.lang3.mutable.MutableInt;
 import org.apache.pulsar.broker.PulsarServerException;
 import org.apache.pulsar.broker.PulsarService;
+import org.apache.pulsar.broker.loadbalance.LeaderBroker;
+import org.apache.pulsar.broker.loadbalance.LeaderElectionService;
+import org.apache.pulsar.broker.loadbalance.extensible.BrokerRegistry;
+import org.apache.pulsar.broker.loadbalance.extensible.ExtensibleLoadManagerWrapper;
 import org.apache.pulsar.broker.loadbalance.extensible.data.Split;
 import org.apache.pulsar.broker.loadbalance.extensible.data.Unload;
 import org.apache.pulsar.broker.loadbalance.impl.LoadManagerShared;
@@ -38,16 +48,18 @@ import org.apache.pulsar.client.impl.schema.JSONSchema;
 import org.apache.pulsar.common.naming.NamespaceBundle;
 import org.apache.pulsar.common.naming.NamespaceBundleSplitAlgorithm;
 import org.apache.pulsar.common.naming.NamespaceName;
+import org.apache.pulsar.common.naming.ServiceUnitId;
 import org.apache.pulsar.common.naming.TopicDomain;
 import org.apache.pulsar.common.topics.TopicCompactionStrategy;
 import org.apache.pulsar.common.util.collections.ConcurrentOpenHashMap;
+import org.apache.pulsar.metadata.api.coordination.LeaderElectionState;
 
 @Slf4j
 public class BundleStateChannel {
 
-    private final TableView<BundleStateData> tv;
+    private TableView<BundleStateData> tv;
 
-    private final Producer<BundleStateData> producer;
+    private Producer<BundleStateData> producer;
 
     private final PulsarService pulsar;
 
@@ -69,9 +81,15 @@ public class BundleStateChannel {
 
     public static final long COMPACTION_THRESHOLD = 5 * 1024 * 1024; // 5mb
 
+    public static final long MAX_IN_FLIGHT_STATE_WAITING_TIME_IN_MILLIS = 30 * 1000; // 30sec
+
     private String lookupServiceAddress;
 
+    private LeaderElectionService leaderElectionService;
 
+    private BrokerRegistry brokerRegistry;
+
+    private boolean leaderCleanBundleOwnerships;
 
     public BundleStateChannel(PulsarService pulsar)
             throws PulsarServerException {
@@ -80,24 +98,85 @@ public class BundleStateChannel {
         this.lookupServiceAddress = pulsar.getAdvertisedAddress() + ":"
                 + (conf.getWebServicePort().isPresent() ? conf.getWebServicePort().get()
                 : conf.getWebServicePortTls().get());
+        this.leaderCleanBundleOwnerships = false;
+    }
+
+    public synchronized void start() throws PulsarServerException {
 
         try {
+            if (leaderElectionService != null) {
+                log.info("Closing the bundle state leader election service.");
+                leaderElectionService.close();
+            }
+            this.leaderElectionService = new LeaderElectionService(
+                    pulsar.getCoordinationService(), pulsar.getSafeWebServiceAddress(),
+                    state -> {
+                        if (state == LeaderElectionState.Leading) {
+                            log.info("This broker was elected as bundleStateChanel leader");
+                        } else {
+                            if (leaderElectionService != null) {
+                                log.info("This broker is a bundleStateChanel follower. "
+                                                + "Current bundleStateChanel leader is {}",
+                                        leaderElectionService.getCurrentLeader());
+                            }
+                        }
+                    });
+            leaderElectionService.start();
+            log.info("Successfully started the bundle state leader election service.");
+            if (tv != null) {
+                log.info("Closing the bundle state tableview.");
+                tv.close();
+            }
             tv = pulsar.getClient().newTableViewBuilder(SCHEMA)
                     .topic(TOPIC)
-                    .loadConf(ImmutableMap.of(
+                    .loadConf(Map.of(
                             "topicCompactionStrategy", BundleStateCompactionStrategy.class.getName()))
                     .create();
+            log.info("Successfully started the bundle state tableview.");
+            if (producer != null) {
+                log.info("Closing the bundle state producer.");
+                producer.close();
+            }
             producer = pulsar.getClient().newProducer(SCHEMA)
                     .topic(TOPIC)
                     .create();
+
+            log.info("Successfully started bundle state producer.");
+            this.brokerRegistry = ((ExtensibleLoadManagerWrapper) pulsar.getLoadManager().get())
+                    .get().getBrokerRegistry();
+            this.pulsar.getLoadManagerExecutor()
+                    .scheduleWithFixedDelay(() -> {
+                                try {
+                                    if (leaderElectionService.isLeader()) {
+                                        if (leaderCleanBundleOwnerships) {
+                                            cleanBundleOwnerships(
+                                                    brokerRegistry.getAvailableBrokers());
+                                            leaderCleanBundleOwnerships = false;
+                                        } else {
+                                            cleanOldInFlightBundles();
+                                            leaderCleanBundleOwnerships = true;
+                                        }
+                                    }
+                                    log.info("Successfully recovered load manager");
+                                } catch (Exception e) {
+                                    log.info("Failed to run bundle ownership clean. will retry..", e);
+                                }
+                            },
+                            0, MAX_IN_FLIGHT_STATE_WAITING_TIME_IN_MILLIS * 5, TimeUnit.MILLISECONDS);
+            log.info("Successfully started the bundle state recovery executor.");
+
+            tv.listen((key, value) -> handle(key, value));
+
+            log.info("Successfully started the bundle state channel.");
+
         } catch (Exception e) {
-            String msg = "Failed to init bundle state channel";
-            e.printStackTrace();
+            String msg = "Failed to init bundle state channel.";
             log.error(msg, e);
             throw new PulsarServerException(msg, e);
         }
 
-        tv.forEachAndListen((key, value) -> handle(key, value));
+
+
     }
 
     public void scheduleBundleStateChannelCompaction() throws PulsarServerException {
@@ -117,6 +196,7 @@ public class BundleStateChannel {
     }
 
     private void handle(String bundle, BundleStateData data) {
+        log.info("{} received a handle request for bundle:{}, data:{}", lookupServiceAddress, bundle, data);
         if (data == null) {
             handleTombstone(bundle);
             return;
@@ -163,10 +243,11 @@ public class BundleStateChannel {
 
         if (isTargetBroker(data.getBroker())) {
             // preset
-            BundleStateData next = new BundleStateData(BundleState.Assigned, data.getBroker(), data.getSourceBroker());
+            BundleStateData next =
+                    new BundleStateData(bundle, BundleState.Assigned, data.getBroker(), data.getSourceBroker());
             pubAsync(bundle, next);
             //TODO: remove log
-            log.info("{} published :{},{}",
+            log.info("{} published :{},{},{}",
                     lookupServiceAddress, pulsar.getBrokerServiceUrl(), bundle, data);
 
         }
@@ -204,13 +285,35 @@ public class BundleStateChannel {
         return producer.newMessage()
                 .key(bundle)
                 .value(data)
-                .sendAsync();
+                .sendAsync()
+                /*.thenApply(messageId -> {
+                            log.info("Published message for bundle:{}, messageId:{}, data:{}",
+                                    bundle, messageId, data);
+                            return messageId;
+                        }
+
+                 )*/
+                .exceptionally(e -> {
+                    log.error("Failed to publish message for bundle:{}, data:{}", bundle, data);
+                    return null;
+                });
     }
 
     private CompletableFuture<MessageId> tombstoneAsync(String bundle) {
+
         return producer.newMessage()
                 .key(bundle)
-                .sendAsync();
+                .sendAsync()
+                /*
+                .thenApply(messageId -> {
+                            log.info("Published tombstone for bundle:{}, messageId:{}", bundle, messageId);
+                            return messageId;
+                        }
+                )*/
+                .exceptionally(e -> {
+                    log.error("Failed to publish tombstone for bundle:{}", bundle);
+                    return null;
+                });
     }
 
     private boolean isTargetBroker(String broker) {
@@ -229,8 +332,10 @@ public class BundleStateChannel {
 
 
     private CompletableFuture<Optional<String>> deferLookUpRequest(String bundle) {
-        CompletableFuture future = new CompletableFuture<>()
-                .orTimeout(30, TimeUnit.SECONDS);
+        CompletableFuture future = new CompletableFuture<>();
+
+        future.orTimeout(MAX_IN_FLIGHT_STATE_WAITING_TIME_IN_MILLIS, TimeUnit.MILLISECONDS);
+
         return lookupRequests
                 .computeIfAbsent(bundle, k -> future);
     }
@@ -299,7 +404,7 @@ public class BundleStateChannel {
 
     public CompletableFuture<Optional<String>> publishAssignment(String bundle, String broker) {
         CompletableFuture<Optional<String>> lookupRequest = deferLookUpRequest(bundle);
-        return pubAsync(bundle, new BundleStateData(BundleState.Assigning, broker))
+        return pubAsync(bundle, new BundleStateData(bundle, Assigning, broker))
                 .thenCompose(x -> lookupRequest)
                 .exceptionally(e -> {
                     lookupRequests.remove(bundle);
@@ -314,15 +419,114 @@ public class BundleStateChannel {
         String bundle = unload.getBundle();
         BundleStateData data = tv.get(bundle);
         BundleStateData next = unload.getDestBroker().isPresent()
-                ? new BundleStateData(BundleState.Assigning, unload.getDestBroker().get(), unload.getSourceBroker())
-                : new BundleStateData(BundleState.Unloading, data.getBroker());
+                ? new BundleStateData(bundle, Assigning,
+                unload.getDestBroker().get(), unload.getSourceBroker())
+                : new BundleStateData(bundle, BundleState.Unloading, data.getBroker());
         pubAsync(bundle, next);
     }
 
     public CompletableFuture<Void> splitBundle(Split split) {
         String bundle = split.getBundle();
         BundleStateData data = tv.get(bundle);
-        BundleStateData next = new BundleStateData(BundleState.Splitting, data.getBroker());
+        BundleStateData next = new BundleStateData(bundle, BundleState.Splitting, data.getBroker());
         return pubAsync(bundle, next).thenCompose(__ -> null);
+    }
+
+    private Set<BundleStateData> getBunldes(String broker){
+        return tv.values().stream()
+                .filter(bundle -> broker.equals(bundle.getBroker()))
+                .collect(Collectors.toSet());
+    }
+
+    private Set<BundleStateData> getBunldes(BundleState state){
+        return tv.values().stream()
+                .filter(bundle -> state.equals(bundle.getState()))
+                .collect(Collectors.toSet());
+    }
+
+    private Set<String> getBrokers(){
+        return tv.values().stream()
+                .map(bundle -> bundle.getBroker())
+                .collect(Collectors.toSet());
+    }
+
+    public void cleanBundleOwnerships(String broker) {
+        if (!leaderElectionService.isLeader()) {
+            return;
+        }
+
+        Set<BundleStateData> values = getBunldes(broker);
+        if (values != null) {
+            log.info("Cleaning bundle ownerships for dead broker:{}. "
+                            + "Attempting to release bundle bundle count:{}",
+                    broker, values == null ? 0 : values.size());
+            for (BundleStateData data : values) {
+                log.info("Cleaning bundle ownerships for dead broker:{}, bundle:{}",
+                        broker, data == null ? "" : data.getBundle());
+                tombstoneAsync(data.getBundle());
+            }
+        }
+    }
+
+    public void cleanBundleOwnerships(List<String> brokers) {
+        if (!leaderElectionService.isLeader()) {
+            return;
+        }
+        if (brokers == null || brokers.size() == 0) {
+            log.warn("no active brokers found. Skipping bundle ownership clean.");
+            return;
+        }
+
+        log.info("Started bundle ownership cleanup for active broker count:{}", brokers.size());
+        int deadBrokerCnt = 0;
+        int releasedBundleCnt = 0;
+        Set<String> deadBrokers = new HashSet<>();
+        Set<String> activeBrokers = new HashSet<>(brokers);
+        for (BundleStateData bundleStateData : tv.values()) {
+            String broker = bundleStateData.getBroker();
+            if (!activeBrokers.contains(broker)) {
+                tombstoneAsync(bundleStateData.getBundle());
+                releasedBundleCnt++;
+                if (deadBrokers.add(bundleStateData.getBroker())) {
+                    deadBrokerCnt++;
+                }
+            }
+        }
+
+        log.info("Completed bundle ownership cleanup. Dead broker count:{}, Released bundle count:{}",
+                deadBrokerCnt, releasedBundleCnt);
+    }
+
+    public void cleanOldInFlightBundles() {
+        if (!leaderElectionService.isLeader()) {
+            return;
+        }
+        log.info("Started old in-flight bundle cleanup");
+        int releasedBundleCnt = 0;
+        long now = System.currentTimeMillis();
+        for (BundleStateData bundleStateData : tv.values()) {
+            if (inFlightStates.contains(bundleStateData.getState())
+                    && now - bundleStateData.getTimestamp() > MAX_IN_FLIGHT_STATE_WAITING_TIME_IN_MILLIS) {
+                tombstoneAsync(bundleStateData.getBundle());
+                releasedBundleCnt++;
+            }
+        }
+        log.info("Completed old in-flight bundle cleanup. Released bundle count:{}", releasedBundleCnt);
+    }
+
+    public CompletableFuture<Optional<String>> getChannelOwnerBroker(ServiceUnitId topic) {
+        Optional<LeaderBroker> leader = leaderElectionService.getCurrentLeader();
+        if (leader.isPresent()) {
+            String broker = leader.get().getServiceUrl();
+            //expecting http://broker-xyz:abcd
+            broker = broker.substring(broker.lastIndexOf('/') + 1);
+            log.info("Found channelOwnerBroker:{} for topic:{}", broker, topic);
+            return CompletableFuture.completedFuture(Optional.of(broker));
+        } else {
+            log.info(
+                    "No leader elected from bundleStateChannelLeaderElectionService for topic:" + topic);
+            throw new IllegalStateException(
+                    "No leader elected from bundleStateChannelLeaderElectionService for topic:" + topic);
+        }
     }
 }
